2004-06-11  Paolo Mantegazza  <mantegazza@aero.polimi.it>

	* rtai-core/include/asm-i386/rtai_lxrt.h: Set __USER_DS when
	entering a 2.6 kernel (instead of __KERNEL_DS with 2.4). This
	fixes the random SEGVs experienced by user-space apps while LXRT
	apps were running. This bug was due to data segment register
	corruption and was specifically triggered by libc6 using the new
	sysenter/sysexit support.

2004-06-10  Philippe Gerum  <rpm@xenomai.org>

	* configure.in: Pass ARCH in RTAI_KBUILD_CMD for 2.6.

2004-06-11  Paolo Mantegazza  <mantegazza@aero.polimi.it>

        * rtai-core/sched/rtai/sched_lxrt.c: forced keeping Linux tasks 
	preempted by RTAI on the CPU they are. Affecting just SMP.

2004-06-09  Philippe Gerum  <rpm@xenomai.org>

	* rtai-core/sched/rtai/sched_lxrt.c (lxrt_context_switch): Use
	arch-independent context switch routine.

	* rtai-core/include/asm-i386/rtai_xeno.h (xnarch_switch_to):
	Inline mm switch code.

	* rtai-core/arch/i386/hal/hal.c: Discard rtai_linux_switch_mm().

2004-06-07  Philippe Gerum  <rpm@xenomai.org>

	* rtai-core/sched/rtai/sched_lxrt.c: Intercept Linux syscalls
	through the adeos_catch_event_facility() facility, so that this
	works indifferently with both int80/sysenter ways of syscalling.

	* rtai-core/include/asm-i386/rtai_lxrt.h: Discard deprecated LXRT
	call stub.

	* rtai-core/scripts/rtai-load.in: Use modprobe -n instead of
	insmod -nq, so that we compatible with both insmod.modutils and
	newer module-init-tools.

2004-06-05  Philippe Gerum  <rpm@xenomai.org>

	* Move to GNA (http://www.gna.org/projects/rtai/).

2004-06-04  Philippe Gerum  <rpm@xenomai.org>

	* rtai-core/sched/xenomai/mutex.c: Add blinking warning about
	kernel mutex support being deprecated in newer versions of the
	Xenomai nanokernel.

	* rtai-core/sched/xenomai/shadow.c (xnshadow_linux_sysexit):
	Always propagate sysexits whenever a signal is pending for the
	current task.

2004-06-01  Philippe Gerum  <rpm@xenomai.org>
